Trunk
-------
New Features
^^^^^^^^^^^^
  * Adding a BGE System subclass (bgui.bge.System) to make it easier to get Bgui up and running in the BGE, which is the only environment it currently supports anyways. The layout code might eventually get moved into bgui.System. The simple example has been updated to make use of the new BGE system, but the other examples have not yet been updated.

Bugs Fixed
^^^^^^^^^^
  * The outline_color for Labels was grabbing the color value instead of outline_color if outline_color was set via the constructor. (reported by SolarLune)

Other Stuff
^^^^^^^^^^^
  * Widget names are now optional, which reduces the amount of typing for creating new widgets. However, to make name an optional argument required switching the arguments for the Image and Video widget constructors. All other widgets should work without changes to users' code.
  * The default ListBoxRenderer now tries to display the item as a string instead of using __repr__ directly. This makes the most basic case (a list of strings) display correctly without extra fuss.
  * Switching some logic so BGUI_DEFAULT is 0. This simplifies passing options to a widget constructor. For example, no more BGUI_DEFAULT | BGUI_CENTERED mess. However, this can break existing setups. In order to make this work, BGUI_NORMALIZED is now BGUI_NO_NORMALIZE and BGUI_THEMED is now BGUI_NO_THEME. If you're relying on these flags, you will have to update your scripts.
  * Getting rid of Widget._cleanup() since we should have working destructors with all the WeakRefs.

0.08
-------
New Features
^^^^^^^^^^^^
  * FrameButton, TextBlock and TextInput now have a LabelSubTheme theme option which can be used to control the subtheme used for the underlying labels in these widgets.
  * Labels can now have outlines.
  * Widgets now have a z_index value for additional control over drawing order. (thanks to andrew-101)