@@ -3,6 +3,7 @@ Trunk
 New Features
 ^^^^^^^^^^^^
   * Adding a BGE System subclass (bgui.bge.System) to make it easier to get Bgui up and running in the BGE, which is the only environment it currently supports anyways. The layout code might eventually get moved into bgui.System. The simple example has been updated to make use of the new BGE system, but the other examples have not yet been updated.
+  * Image widgets now have an image_size attribute that returns the pixel dimensions of their loaded images. (thanks to reach.me.et)
 
 Bugs Fixed
 ^^^^^^^^^^
